--- a/comics/202/index.html
+++ b/comics/202/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #201: The Old Way</title>
+    <title>comiCSS #202: Pedro Pascal</title>
 
-    <meta property="og:title" content="comiCSS #201: The Old Way" />
+    <meta property="og:title" content="comiCSS #202: Pedro Pascal" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/201" />
-    <meta property="og:image" content="https://comicss.art/comics/201/thumb.png" />
-    <meta property="og:description" content="comic with 4 panels in a 2x2 grid. In the first panel, a character asks 'Hey, dude! What are you up to?' a second character replies 'Just building a website... the old way: no frameworks, no webpack, no AI, no libraries... Just crafting HTML, JS, and CSS. It is so much fun!' to the shock of the first character who backs away slowly, to go and tell a different person 'I tell you! He has lost his ******* mind!' in the last panel" />
+    <meta property="og:url" content="https://comicss.art/comics/202" />
+    <meta property="og:image" content="https://comicss.art/comics/202/thumb.png" />
+    <meta property="og:description" content="comic with 4 panels in a 2x2 grid showing 2 characters talking. A person says 'Check this out! I created a library for comiCSS that...' and a econd character interrupts him 'Let me stop you right there! A comic? Really? That's a dead medium! Seriously... A comic... and about CSS... No one will read that! You should focus on something more interesting like movies or series... something with Pedro Pascal. Pedro Pascal is everywhere, and it's all good. But CSS? In a comic? Nope!' and adding as he leaves 'I would stop with the CSS nonsense and include something with Pedro Pascal, you'll get views and traction... But it's your call. Bye bye!'. In the last panel, it is revealed that the first person was Pedro Pascal wearing a mask (a caricature of him). Pedro says 'I can't connect with the character. What's his deal? Is he happy? Sad? ...and what is CSS? And the dialog? Terrible! Of course I'm everywhere. I'm Pedro ******* Pascal!'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/201">
-    <meta name="twitter:title" content="comiCSS #201: The Old Way">
-    <meta name="twitter:description" content="comic with 4 panels in a 2x2 grid. In the first panel, a character asks 'Hey, dude! What are you up to?' a second character replies 'Just building a website... the old way: no frameworks, no webpack, no AI, no libraries... Just crafting HTML, JS, and CSS. It is so much fun!' to the shock of the first character who backs away slowly, to go and tell a different person 'I tell you! He has lost his ******* mind!' in the last panel">
-    <meta name="twitter:image" content="https://comicss.art/comics/201/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/202">
+    <meta name="twitter:title" content="comiCSS #202: Pedro Pascal">
+    <meta name="twitter:description" content="comic with 4 panels in a 2x2 grid showing 2 characters talking. A person says 'Check this out! I created a library for comiCSS that...' and a econd character interrupts him 'Let me stop you right there! A comic? Really? That's a dead medium! Seriously... A comic... and about CSS... No one will read that! You should focus on something more interesting like movies or series... something with Pedro Pascal. Pedro Pascal is everywhere, and it's all good. But CSS? In a comic? Nope!' and adding as he leaves 'I would stop with the CSS nonsense and include something with Pedro Pascal, you'll get views and traction... But it's your call. Bye bye!'. In the last panel, it is revealed that the first person was Pedro Pascal wearing a mask (a caricature of him). Pedro says 'I can't connect with the character. What's his deal? Is he happy? Sad? ...and what is CSS? And the dialog? Terrible! Of course I'm everywhere. I'm Pedro ******* Pascal!'">
+    <meta name="twitter:image" content="https://comicss.art/comics/202/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/201" />
+    <link rel="canonical" href="https://comicss.art/comics/202" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>The Old Way</h1>
+      <h1>Pedro Pascal</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/200" rel="prev">
+        <a href="/comics/201" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/174">
+        <a class="random-post" href="/comics/105">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/202" rel="next">
+        <a href="/comics/203" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,11 +139,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels in a 2x2 grid. In the first panel, a character asks 'Hey, dude! What are you up to?' a second character replies 'Just building a website... the old way: no frameworks, no webpack, no AI, no libraries... Just crafting HTML, JS, and CSS. It is so much fun!' to the shock of the first character who backs away slowly, to go and tell a different person 'I tell you! He has lost his ******* mind!' in the last panel">
-        <img src="/comics/201/201-the-old-way-0.webp" alt="" width="350" />
-        <img src="/comics/201/201-the-old-way-1.webp" alt="" width="350" />
-        <img src="/comics/201/201-the-old-way-2.webp" alt="" width="350" />
-        <img src="/comics/201/201-the-old-way-3.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels in a 2x2 grid showing 2 characters talking. A person says 'Check this out! I created a library for comiCSS that...' and a econd character interrupts him 'Let me stop you right there! A comic? Really? That's a dead medium! Seriously... A comic... and about CSS... No one will read that! You should focus on something more interesting like movies or series... something with Pedro Pascal. Pedro Pascal is everywhere, and it's all good. But CSS? In a comic? Nope!' and adding as he leaves 'I would stop with the CSS nonsense and include something with Pedro Pascal, you'll get views and traction... But it's your call. Bye bye!'. In the last panel, it is revealed that the first person was Pedro Pascal wearing a mask (a caricature of him). Pedro says 'I can't connect with the character. What's his deal? Is he happy? Sad? ...and what is CSS? And the dialog? Terrible! Of course I'm everywhere. I'm Pedro ******* Pascal!'">
+        <img src="/comics/202/202-pedro-pascal-0.webp" alt="" width="350" />
+        <img src="/comics/202/202-pedro-pascal-1.webp" alt="" width="350" />
+        <img src="/comics/202/202-pedro-pascal-2.webp" alt="" width="350" />
+        <img src="/comics/202/202-pedro-pascal-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,13 +153,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/200" rel="prev">
+        <a href="/comics/201" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/99">
+        <a class="random-post" href="/comics/107">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -167,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/202" rel="next">
+        <a href="/comics/203" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/201">https://comicss.art/comics/201</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/201/the-old-way.png">https://comicss.art/comics/201/the-old-way.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/201/the-old-way.html" rel="alternate">https://comicss.art/comics/201/the-old-way.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/202">https://comicss.art/comics/202</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/202/pedro-pascal.png">https://comicss.art/comics/202/pedro-pascal.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/202/pedro-pascal.html" rel="alternate">https://comicss.art/comics/202/pedro-pascal.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +221,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 201;</script>
+    <script>let postId = 202;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
