--- a/comics/210/index.html
+++ b/comics/210/index.html
@@ -9,24 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #210: Background-Repeat Oreos</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #210: Background-Repeat Oreos" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/210" />
+    <meta property="og:image" content="https://comicss.art/comics/210/thumb.png" />
+    <meta property="og:description" content="background-repeat with oreos: no-repeat only has one cream at the top and the text ORE O; repeat has 2.5 creams and the text ORERERO; round has two creams but larger than usual and the text OREEREEO; space has two creams with a gap in between and the text ORE REO" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/210">
+    <meta name="twitter:title" content="comiCSS #210: Background-Repeat Oreos">
+    <meta name="twitter:description" content="background-repeat with oreos: no-repeat only has one cream at the top and the text ORE O; repeat has 2.5 creams and the text ORERERO; round has two creams but larger than usual and the text OREEREEO; space has two creams with a gap in between and the text ORE REO">
+    <meta name="twitter:image" content="https://comicss.art/comics/210/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/210" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -97,7 +96,7 @@
         </ul>
       </nav>
     </header>
-    <main id="main" class="latest">
+    <main id="main">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
@@ -126,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/211" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -140,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="background-repeat with oreos: no-repeat only has one cream at the top and the text ORE O; repeat has 2.5 creams and the text ORERERO; round has two creams but larger than usual and the text OREEREEO; space has two creams with a gap in between and the text ORE REO">
+      <div id="comic-strip" role="img" class="vertical" aria-label="background-repeat with oreos: no-repeat only has one cream at the top and the text ORE O; repeat has 2.5 creams and the text ORERERO; round has two creams but larger than usual and the text OREEREEO; space has two creams with a gap in between and the text ORE REO">
         <img src="/comics/210/210-oreo-0.webp" alt="" width="350" />
       </div>
 
@@ -165,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/211" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -179,8 +178,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/210">https://comicss.art/comics/210</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/210/oreo.png">https://comicss.art/comics/210/oreo.png</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/210">https://comicss.art/comics/210</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/210/oreo.png">https://comicss.art/comics/210/oreo.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/210/oreo.html" rel="alternate">https://comicss.art/comics/210/oreo.html</a></p>
 
       <hr />
@@ -219,8 +218,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-09-21"></script>
+    <script>let postId = 210;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
